# chexnet-tf2

./: LICENSE  README.md  environment.yaml  setup.cfg
checkpoint/chexnet/best/: cp.ckpt.index
checkpoint/kaggle/best/: cp.ckpt.index
checkpoint/kaggle/best/model/: keras_metadata.pb
checkpoint/kaggle/best/model/variables/: variables.index
chexnet/configs/: config.py  kaggle_config.py
chexnet/dataloader/: cxr14_dataset.py  kaggleXRay.py
chexnet/model/: chexnet.py
chexnet/scripts/: load_dataset.py  test.py  train.py  train_kaggle.py  xai.py
chexnet/xai/: keras.py  utils.py
slurm/: example.job.sbatch  example.job.sh  load_dataset.job.sbatch  load_dataset.job.sh  train.job.sbatch  train.job.sh  train_kaggle_1.job.sh  train_kaggle_2.job.sh  train_kaggle_3.job.sh  train_kaggle_4.job.sh  train_kaggle_5.job.sh  xai.job.sbatch  xai.job.sh
src/chexnet/configs/: config.py
src/chexnet/scripts/: load_dataset.py  train.py
